uclibc: buildsystem updates
Condensed into single commit since they are not relevant for the l4re
build.

buildsys: remove duplicate UCLIBC_EXTRA_CFLAGS
buildsys: use SED for create-lds
buildsys: refine compile.S
          filter out all -std=
buildsys: tweak check_ld flag probing
          ld was (erroneously) complaining that it failed to merge
          private bfd data. Silence this mismatch as seen on m68k with
          obfd binary.
buildsys: Fix typo
          LDFLAG-fuse-ld looked at a non-existing var, use the correct
          one
nptl: rephrase *.sym handling
          Avoids circular dependency warning from make by generating
          the .h directly from the .sym files, elimination intermediate
          files.
buildsys: fix IS_IN_lib*
          define NOT_IN_libc / IS_IN_libxxx appropriately
          to fix pthread_once
buildsys: remove now redundant lib placement defines
buildsys: remove some obsolete optimization CFLAGS

Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

don't optimize for special mips cpu
          When building optimized code for Lemote Yeelong system, a
          conflict occurs. Better use optimized flags in your
          buildsystem, not in uClibc-ng.

Change-Id: Ife113a90bfab4d43573f423a43fe5727f3423eee

--- a/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/common/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/libc/sysdeps/linux/common/Makefile.in
@@ -110,6 +110,8 @@ ifneq ($(strip $(ARCH_OBJS-y)),)
 CSRC-y := $(filter-out $(notdir $(ARCH_OBJS-y:.o=.c)) $(ARCH_OBJ_FILTEROUT-y),$(CSRC-y))
 endif
 
+CFLAGS-OMIT-ssp.c := $(CFLAG_-fstack-protector) $(CFLAG_-fstack-protector-all) $(CFLAG_-fstack-protector-strong)
+CFLAGS-OMIT-ssp-local.c := $(CFLAG_-fstack-protector) $(CFLAG_-fstack-protector-all) $(CFLAG_-fstack-protector-strong)
 CFLAGS-ssp.c := $(SSP_DISABLE_FLAGS)
 CFLAGS-ssp-local.c := $(SSP_DISABLE_FLAGS)
 
