uclibc: enable this symbol by default
disabling this results in non-working toolchain building, so
better do not allow anyone to disable it.

Change-Id: I930e67610b2dece2e4656a1ceceeada180ce21e1

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -467,7 +467,7 @@ config LDSO_NO_CLEANUP
 	  Unless you know you need this, you should answer N.
 
 config UCLIBC_CTOR_DTOR
-	bool "Support global constructors and destructors"
+	boolean
 	default y
 	help
 	  If you wish to build uClibc with support for global constructor
