--- a/uclibc/lib/contrib/uclibc/utils/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/utils/Makefile.in
@@ -53,6 +53,7 @@ UTILS_CONFIG_FLAGS-$(LDSO_STANDALONE_SUPPORT) += -D__LDSO_STANDALONE_SUPPORT__
 BUILD_CFLAGS-utils := \
     -DUCLIBC_RUNTIME_PREFIX=\"$(RUNTIME_PREFIX)\" \
     -DUCLIBC_LDSO=\"$(UCLIBC_LDSO)\" \
+    -DARCH_NATIVE_BIT=$(ARCH_NATIVE_BIT) \
     $(UTILS_CONFIG_FLAGS-y)
 BUILD_CFLAGS-ldconfig.host := \
 				-DBUILDING_LINKAGE \
