uclibc: sync upstream ARC architecture changes
This commit contains the following upstream changes

ARC: Conditionalise certain relocations as provided by TLS tools only
ARC defconfigs: enable some items
ARC: remove stale TRUNCATE64_HAS_4_ARGS
ARC: siagction: opencode memcpy
ARC: sigaction: inline syscall trap
ARC: sigaction: fold default sigrestorer into "C"
NPTL/ARCv2: Implement full memory barrier for NPTL
NPTL/ARC: fix __lll_lock_wait_private redefinition for static links
ARC: With NPTL support, GP is no longer used for PIC

Signed-off-by: Vineet Gupta <vgupta@synopsys.com>

ARC: add configuration option for MMU page size
ARC: don't hard-code ELF_NGREG

Signed-off-by: Alexey Brodkin <abrodkin@synopsys.com>
Signed-off-by: Vineet Gupta <vgupta@synopsys.com>

ARC: Add GNU glob to ARC defconfigs

Signed-off-by: Anton Kolesov <anton.kolesov@synopsys.com>
Cc: Vineet Gupta <Vineet.Gupta1@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

ARCv2 ISA support

Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

ARCv2: optimised string routines

Signed-off-by: Claudiu Zissulescu <claziss@synopsys.com>
Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

ARC: Remove unused EM_ARC_A5
ARC: switch to NPTL

Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

Add support for R_ARC_NONE relocations.

Signed-off-by: Andrew Burgess <andrew.burgess@embecosm.com>
Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

ARC/signal: shield sa_restorer from compiler toggle side-effects

Reported-and-Debugged-by: Alexey Brodkin <abrodkin@synopsys.com>
Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

ARC: enable more options to satisfy build requirements o

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -257,6 +257,7 @@ config TARGET_SUBARCH
 	default "i486" if CONFIG_486
 	default "i586" if CONFIG_586
 	default "i686" if CONFIG_686
+	default "arcv2" if CONFIG_ARC_CPU_HS
 	default ""
 
 source "extra/Configs/Config.in.arch"
