--- a/uclibc/lib/contrib/uclibc/extra/Configs/defconfigs/arc/arcv2_defconfig
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/defconfigs/arc/arcv2_defconfig
@@ -1,3 +1,4 @@
+CONFIG_ARC_CPU_HS=y
 ARCH_WANTS_LITTLE_ENDIAN=y
 # UCLIBC_HAS_FPU is not set
 DO_C99_MATH=y
@@ -6,28 +7,28 @@ KERNEL_HEADERS="%KERNEL_HEADERS%"
 # LDSO_CACHE_SUPPORT is not set
 LDSO_RUNPATH=y
 # LDSO_SAFE_RUNPATH is not set
-LINUXTHREADS_OLD=y
+UCLIBC_HAS_THREADS_NATIVE=y
 PTHREADS_DEBUG_SUPPORT=y
-MALLOC_GLIBC_COMPAT=y
+UCLIBC_HAS_OBSTACK=y
+UCLIBC_HAS_UTMPX=y
+UCLIBC_HAS_UTMP=y
+UCLIBC_SUSV2_LEGACY=y
 UCLIBC_SUSV3_LEGACY=y
 UCLIBC_SUSV4_LEGACY=y
-UCLIBC_HAS_GETPT=y
+UCLIBC_HAS_PROGRAM_INVOCATION_NAME=y
 UCLIBC_HAS_LIBUTIL=y
 UCLIBC_HAS_OBSOLETE_BSD_SIGNAL=y
 UCLIBC_SV4_DEPRECATED=y
 UCLIBC_HAS_IPV6=y
 UCLIBC_HAS_RPC=y
 UCLIBC_HAS_FULL_RPC=y
-UCLIBC_HAS_REENTRANT_RPC=y
+UCLIBC_USE_NETLINK=y
+UCLIBC_SUPPORT_AI_ADDRCONFIG=y
 UCLIBC_HAS_RESOLVER_SUPPORT=y
 UCLIBC_HAS_LIBRESOLV_STUB=y
 UCLIBC_HAS_LIBNSL_STUB=y
-UCLIBC_HAS_CTYPE_CHECKED=y
 UCLIBC_HAS_LOCALE=y
-UCLIBC_HAS_FOPEN_EXCLUSIVE_MODE=y
-UCLIBC_HAS_FOPEN_CLOSEEXEC_MODE=y
 UCLIBC_HAS_GLIBC_CUSTOM_STREAMS=y
-UCLIBC_HAS_PRINTF_M_SPEC=y
 UCLIBC_HAS_NFTW=y
 UCLIBC_HAS_FTW=y
 UCLIBC_HAS_GNU_GLOB=y
@@ -36,3 +37,4 @@ DEVEL_PREFIX="%DEVEL_PREFIX%"
 CROSS_COMPILER_PREFIX="arc-linux-uclibc-"
 # DOSTRIP is not set
 SUPPORT_LD_DEBUG=y
+UCLIBC_HAS_BACKTRACE=y
