uclibc/utmp: sync upstream updates
buildsys: HAS_UTMP (XPG2, SVr4 compat) knob
utmp: add _unlocked suffix to internal helpers
utmp: Remove unneeded aliases
utmp: indent
utmp: Remove unneeded alias
utmp: favour POSIX utmpx over SVID utmp
utmp: always have at least utmpx

Change-Id: I04ec34f4ac908767901e7e0c284b852eabf9f2d8
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -727,6 +727,25 @@ config COMPAT_ATEXIT
 	  Enable this option if you want to update from 0.9.28 to git/0.9.29,
 	  else you will be missing atexit() until you rebuild all apps.
 
+config UCLIBC_HAS_UTMPX
+	bool "utmpx based support for tracking login/logouts to/from the system"
+	help
+	  Answer y to enable support for accessing user accounting database.
+	  It can be used to track all login/logout to the system.
+
+config UCLIBC_HAS_UTMP
+	bool "utmp support (XPG2 compat, SVr4 compat)"
+	depends on UCLIBC_HAS_UTMPX
+	help
+	  Answer y to enable legacy SVID support for accessing
+	  user accounting database:
+		   getutent(), getutid(), getutline(), pututline(),
+		   setutent(), endutent(), utmpname() in utmp.h
+	  It can be used to track all login/logout to the system.
+
+	  If unsure, answer N and use corresponding POSIX functions
+	  from utmpx.h
+
 config UCLIBC_SUSV2_LEGACY
 	bool "Enable SuSv2 LEGACY functions"
 	help
@@ -2045,14 +2064,6 @@ config UCLIBC_HAS_GNU_GLOB
 	  SUSv3 compatible glob().
 
 	  Most people will answer N.
-
-config UCLIBC_HAS_UTMPX
-       bool "utmpx based support for tracking login/logouts to/from the system"
-       help
-         Answer y to enable support for accessing user accounting database.
-         It can be used to track all login/logout to the system.
-
-         If unsure, just answer N.
 
 endmenu
 
