uclibc/h8300: upstream architecture update
This collects the following changes:

h8300: config update
h8300: 64bit integer support
h8300: Assembly functions
h8300: headers update
h8300: Add new feature
h8300: Makefile update

Signed-off-by: Yoshinori Sato <ysato@users.sourceforge.jp>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

---

h8300 has no NPTL
disable not available CFLAGS for h8300
fix some type differences to linux-next for h8/300
h8300: fix compile with 4.2.x kernel
h8300: do not use LDFLAGS, they are wrong. testsuite compile fails with it

---

h8300: vfork flags update.
h8300: O_DIRECT and O_DIRECTORY swapping.

Signed-off-by: Yoshinori Sato <ysato@users.sourceforge.jp>

--

Change-Id: I0105085d310263a7648738d526c9bb060193cfb0

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -74,8 +74,8 @@ config TARGET_cris
 #config TARGET_frv
 #	bool "frv (BROKEN)"
 
-#config TARGET_h8300
-#	bool "h8300 (BROKEN)"
+config TARGET_h8300
+	bool "h8300"
 
 #config TARGET_hppa
 #	bool "hppa"
@@ -578,6 +578,7 @@ config UCLIBC_HAS_THREADS_NATIVE
 		   !TARGET_bfin && \
 		   !TARGET_c6x && \
 		   !TARGET_cris && \
+		   !TARGET_h8300 && \
 		   !TARGET_hppa && \
 		   !TARGET_ia64 && \
 		   !TARGET_m68k && \
